--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -75,6 +75,29 @@
 		</div>
 	</div>
 </div>
+  <footer class="main-footer mt-5 pt-4 text-light">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<h3>Entre em Contato</h3>
+				<address>
+					+55 11 95749-4489
+					<br/>
+					<a href="mailto:ramalho@python.pro.br" class="text-light">ramalho@python.pro.br</a>
+				</address>
+			</div>
+		</div>
+	</div>
+	<div class="rights pb-4">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					{% now 'Y' %} Python Pro. Todos os direitos reservados.
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
 
 
   </body>
