--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -43,10 +43,30 @@
 				<h2>
 					Curso de Python com Luciano Ramalho
 				</h2>
-				<p>
-					Confira em breve mais informações sobre o curso que será ministrado pelo autor do livro.
-					<a href="http://shop.orelly.com/product/0636920032519.do" target="_blank" >Python Fluente</a>
-				</p>
+				<h4 class="mt-4">Entre na fila de espera</h4>
+
+				<form action="https://python.us6.list-manage.com/subscribe/post?u=ade998d0b123a1b2537e9d13f&amp;id=04c2424655"
+	  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-row align-items-center"
+	  target="_blank" novalidate>
+  <div class="form-row align-items-center">
+    <div class="col-auto">
+      <label class="sr-only" for="mce-EMAIL">Email</label>
+      <input type="email" value="" name="EMAIL" class="form-control required" id="mce-EMAIL" placeholder="exemplo@email.com">
+    </div>
+	  <div class="col-auto">
+      <label class="sr-only" for="mce-FNAME">Nome</label>
+      <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Seu Nome">
+    </div>
+
+	  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ade998d0b123a1b2537e9d13f_04c2424655" tabindex="-1" value=""></div>
+
+    <div class="col-auto">
+      <button type="submit" class="btn btn-primary mb-2">Salvar</button>
+    </div>
+  </div>
+</form>
+
 			</div>
 			<div class="row">
 				<div class="col-md-12">
