Aplicada composição de templates
close #92

--- a/pypro/aperitivos/templates/aperitivos/indice.html
+++ b/pypro/aperitivos/templates/aperitivos/indice.html
@@ -9,12 +9,11 @@
                 <h1 class="mt-4 mb-3">ista de Vídeos Aperitivos</h1>
                 <ol>
                     {% for video in videos %}
-                        <li>{{ video.titulo | default:"Faltando Título"}}</li>
+                        <li><a href="{{ video.get_absolute_url }}"></a>{{ video.titulo | default:"Faltando Título" }}</a></li>
                     {% empty %}
                         <li>Não foi encontrado nenhum vídeo de aperitivo</li>
                     {% endfor %}
                 </ol>
-
             </div>
         </div>
     </div>
